# vignettte

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE.md  README.md  docker-compose.yml  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
.sqlx/: query-2c0e88a9b240ca8e092cdfbabf2c00e8a8b685f202a71498a36b5f012d2c5dcb.json  query-306b69ff974f5749160b08d469c9c33ebd5d0069932fd492681b112cc04802b8.json
app/: globals.scss  layout.tsx  route.ts
app/(interstitial)/: layout.tsx
app/(interstitial)/auth/: page.tsx
app/(main)/: layout.tsx
app/(main)/dashboard/: page.tsx
app/(main)/settings/: page.tsx
components/auth/: CallbackChecker.tsx  SignInButton.tsx  index.tsx
components/nav/: Action.tsx  Bar.tsx  Branding.tsx  Link.tsx  index.tsx
components/ui/: Button.tsx  Drawer.tsx  Input.tsx
frontend/: app.vue  mdx-components.tsx  next.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/_forms/: organizer-settings.tsx
frontend/app/forms/: organizer-settings.tsx
frontend/app/help/: layout.tsx  page.mdx
frontend/app/preferences/: layout.tsx  page.tsx
frontend/app/settings/: layout.tsx  page.tsx
frontend/components/nav/: link.tsx  pane.tsx
frontend/components/shell/: header.tsx  index.tsx
frontend/components/ui/: button.tsx  (+11 more)
frontend/layouts/: default.vue
frontend/lib/: utilities.ts
frontend/src/: app.css  hooks.server.ts
lib/server/: env.ts
lib/types/: media.ts  monitor.ts
lib/util/: index.ts  popup.ts
migrations/: 20240311023236_movies.sql
prisma/: schema.prisma
server/: Cargo.toml
server/src/: auth.rs  database.rs  handlers.rs  lib.rs  main.rs  router.rs
server/src/handlers/: auth.rs  mod.rs  ping.rs
src/: data.rs  database.rs  handler.rs  lib.rs  main.rs  models.rs  routes.rs
src/models/: error.rs  movie.rs
src/organizer/: format.rs
src/routes/: add_movie.rs  movies.rs  not_found.rs
src/sabnzbd/: mod.rs  status.rs
(+23 files in other folders)
