[package]
name = "vignettte"
version = "0.1.0"
edition = "2021"
description = "A smarter media automator for bittorrent and usenet"
license = "GPL-3.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rust-ini = "0.20.0"
once_cell = "1.19.0"
