[package]
name = "vignettte"
version = "0.1.0"
edition = "2021"
description = "A smarter media automator for bittorrent and usenet"
license = "MIT"
exclude = ["/frontend"]

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-cors = "0.7"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1.0"
log = { version = "0.4", features = ["std"] }
env_logger = "0.11"
convert_case = "0.6.0"
regex = "1.10.4"

[dev-dependencies]
mockito = "1.4"
lazy_static = "1.4.0"
